--- a/passcode.html
+++ b/passcode.html
@@ -81,7 +81,7 @@
         <form action="/passcode" method="post">
             <h1>Access Forbidden</h1>
             <p>A passcode is required.</p>
-            <input type="password" class="textbox" name="passcode" id="passcode" placeholder="Passcode">
+            <input type="password" class="textbox" name="passcode" id="passcode" placeholder="Passcode" autofocus>
             <input type="submit" value="Proceed">
         </form>
     </div>
