--- a/passcode.html
+++ b/passcode.html
@@ -79,16 +79,154 @@
 <body>
     <div class="centerouter flex-1">
         <form action="/passcode" method="post">
-            <h1>Access Forbidden</h1>
-            <p>A passcode is required.</p>
-            <input type="password" class="textbox" name="passcode" id="passcode" placeholder="Passcode" autofocus>
-            <input type="submit" value="Proceed">
+            <h1 class="i18ne">Access Forbidden</h1>
+            <p class="i18ne">A passcode is required.</p>
+            <input id="passcode" type="password" class="textbox" name="passcode" placeholder="Passcode" autofocus>
+            <input id="btnSubmit" type="submit" value="Proceed">
         </form>
     </div>
     <div class="footer">
         © 2019 - <a href="https://yuuza.net/">Yuuza</a>
         - <a href="http://beian.miit.gov.cn/" target="_blank">桂ICP备19010850号-1</a>
     </div>
+    <script>
+        class I18n {
+            constructor() {
+                this.data = {};
+                this.curLang = 'en';
+                this.missing = new Map();
+            }
+            /** Get i18n string for `key`, return `key` when not found. */
+            get(key, arg) {
+                return this.get2(key, arg) || key;
+            }
+            /** Get i18n string for `key`, return `null` when not found. */
+            get2(key, arg, lang) {
+                lang = lang || this.curLang;
+                var langObj = this.data[lang];
+                if (!langObj) {
+                    console.log('i18n missing lang: ' + lang);
+                    return null;
+                }
+                var r = langObj[key];
+                if (!r) {
+                    if (!this.missing.has(key)) {
+                        this.missing.set(key, 1);
+                        console.log('i18n missing key: ' + key);
+                    }
+                    return null;
+                }
+                if (arg) {
+                    for (const key in arg) {
+                        if (arg.hasOwnProperty(key)) {
+                            const val = arg[key];
+                            r = r.replace('{' + key + '}', val);
+                            // Note that it only replaces the first occurrence.
+                        }
+                    }
+                }
+                return r;
+            }
+            /** Fills data with an 2darray */
+            add2dArray(array) {
+                const langObjs = [];
+                const langs = array[0];
+                for (const lang of langs) {
+                    langObjs.push(this.data[lang] = this.data[lang] || {});
+                }
+                for (let i = 1; i < array.length; i++) {
+                    const line = array[i];
+                    const key = line[0];
+                    for (let j = 0; j < line.length; j++) {
+                        const val = line[j];
+                        langObjs[j][key] = val;
+                    }
+                }
+            }
+            renderElements(elements) {
+                console.log('i18n elements rendering');
+                elements.forEach(x => {
+                    for (const node of x.childNodes) {
+                        if (node.nodeType == Node.TEXT_NODE) {
+                            // console.log('node', node);
+                            var r = this.get2(node.beforeI18n || node.textContent);
+                            if (r) {
+                                node.beforeI18n = node.beforeI18n || node.textContent;
+                                node.textContent = r;
+                            }
+                            else {
+                                if (node.beforeI18n) {
+                                    node.textContent = node.beforeI18n;
+                                }
+                                console.log('missing key for node', node);
+                            }
+                        }
+                    }
+                });
+            }
+            /**
+             * Detect the best available language using
+             * the user language preferences provided by the browser.
+             * @param langs Available languages
+             */
+            static detectLanguage(langs) {
+                var cur;
+                var curIdx = -1;
+                var languages = [];
+                // ['en-US'] -> ['en-US', 'en']
+                (navigator.languages || [navigator.language]).forEach(lang => {
+                    languages.push(lang);
+                    if (lang.indexOf('-') > 0)
+                        languages.push(lang.substr(0, lang.indexOf('-')));
+                });
+                langs.forEach((l) => {
+                    var idx = languages.indexOf(l);
+                    if (!cur || (idx !== -1 && idx < curIdx)) {
+                        cur = l;
+                        curIdx = idx;
+                    }
+                });
+                return cur;
+            }
+        }
+        var i18n = new I18n();
+        function I(literals, ...placeholders) {
+            if (placeholders.length == 0) {
+                return i18n.get(literals[0]);
+            }
+            // Generate format string from template string:
+            var formatString = '';
+            for (var i = 0; i < literals.length; i++) {
+                var lit = literals[i];
+                formatString += lit;
+                if (i < placeholders.length) {
+                    formatString += '{' + i + '}';
+                }
+            }
+            var r = i18n.get(formatString);
+            for (var i = 0; i < placeholders.length; i++) {
+                r = r.replace('{' + i + '}', placeholders[i]);
+            }
+            return r;
+        }
+        // Use JSON.parse(a_big_json) for faster JavaScript runtime parsing
+        i18n.add2dArray(JSON.parse(`[
+    ["en", "zh"],
+    ["Access Forbidden", "拒绝访问"],
+    ["A passcode is required.", "需要口令"],
+    ["Proceed", "确认"],
+    ["Passcode", "口令"]
+]`));
+        i18n.curLang = I18n.detectLanguage(['en', 'zh']);
+        i18n.renderElements(document.querySelectorAll('.i18ne'));
+
+        function renderProperty(obj, key) {
+            obj[key] = i18n.get(obj[key]);
+        }
+
+        renderProperty(document.getElementById('btnSubmit'), 'value');
+        renderProperty(document.getElementById('passcode'), 'placeholder');
+    </script>
 </body>
 
 </html>
